--- a/index.html
+++ b/index.html
@@ -53,5 +53,19 @@
     <p>Si quieres más información te invito a visitar <a href="http://es.linkedin.com/in/alonsogarciapablo" rel="external">mi perfil en LinkedIn</a> y <a href="/blog" rel="external">mi blog</a>. ¡Muchas gracias por tu visita!</p>
     <p>Pablo.</p>
   </div>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-17819311-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </body>
 </html>
