--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </div>
   </div>
   <div id="contents">
+    <p id="translate"><a href="index_en.html">English version</a></p>
     <h2>Hola, bienvenido</h2>
     <p class="intro">Bienvenido a la página personal de Pablo Alonso García. Aquí encontrarás información sobre mi perfil profesional. Tengo un <a href="/blog">blog</a>, donde hablo sobre <strong>desarrollo</strong>, <strong>metodologías ágiles</strong>, libros, y escribo tutoriales sobre <strong>tecnologías web</strong>.</p>
     <h2>¿Qué debes saber sobre mí?</h2>
@@ -42,7 +43,7 @@
     <p>Procuro utilizar <strong>prácticas que garantizan la calidad de mi trabajo</strong>: <a href="http://en.wikipedia.org/wiki/Software_prototyping" rel="external">prototipado</a>, <a href="http://en.wikipedia.org/wiki/Revision_control" rel="external">repositorios de código fuente</a>, <a href="http://en.wikipedia.org/wiki/Build_automation" rel="external">despliegues automátizados</a>, <a href="http://en.wikipedia.org/wiki/Test-driven_development" rel="external">desarrollo dirigido por pruebas</a>, <a href="http://en.wikipedia.org/wiki/Refactoring" rel="external">refactoring</a>, <a href="http://en.wikipedia.org/wiki/Pair-programming" rel="external">pair programming</a>.</p>
     <p>Si quieres ver algo de código, puedes <a href="https://github.com/alonsogarciapablo" rel="external">acceder a mi cuenta en GitHub</a>.</p>
     <h3>Trabajo con Ruby On Rails</h3>
-    <p>He trabajado en proyectos <i>Java</i>, <i>Javascript</i> y <i>XUL</i>, <i>PHP</i>. En 2008 descubrí <a href="http://rubyonrails.org/" rel="external">Ruby On Rails</a>, que ofrece un <i>framework</i> de código abierto para el desarrollo de aplicaciones web. <strong>Ruby es un lenguaje divertido y Rails proporciona soluciones a los problemas más comunes de este tipo de aplicaciones</strong>. Y detrás de todo esto, una comunidad de personas a las que verdaderamente les gusta programar buen código.</p>
+    <p>He trabajado en proyectos <i>Java</i>, <i>Javascript</i> y <i>XUL</i>, <i>PHP</i>. En 2007 descubrí <a href="http://rubyonrails.org/" rel="external">Ruby On Rails</a>, que ofrece un <i>framework</i> de código abierto para el desarrollo de aplicaciones web. <strong>Ruby es un lenguaje divertido y Rails proporciona soluciones a los problemas más comunes de este tipo de aplicaciones</strong>. Y detrás de todo esto, una comunidad de personas a las que verdaderamente les gusta programar buen código.</p>
     <h3>Creo en las metodologías ágiles</h3>
     <p>No creo en el modelo de desarrollo en cascada. Mi experiencia me dice que no funciona. Creo <a href="http://agilemanifesto.org/principles.html" rel="external">en los principios del manifiesto Ágil</a>. Metodologías como <a href="http://en.wikipedia.org/wiki/Scrum_(development)" rel="external">SCRUM</a> están dando buenos resultados y yo intento aplicarlas en los proyectos en los que participo. Me queda mucho por aprender, por eso asisto a eventos como <a href="http://alonsogarciapablo.com/blog/retrospectiva-de-agile-spain-2010-la-primera-conferencia-sobre-metodos-agiles-en-espana/">Agile Spain 2010</a>.</p>
     <h3>Creo en las empresas pequeñas</h3>
