Fixed some CSS layout problems. Added the github icon and link. Minor changes in texts

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<li class="twitter"><a href="http://twitter.com/_pablo_alonso" rel="external">Mi perfil en Twitter</a></li> 
 				<li class="facebook"><a href="http://www.facebook.com/alonsogarciapablo" rel="external">Mi perfil en Facebook</a></li> 
 				<li class="wordpress"><a href="/blog" rel="external">Mi blog</a></li> 
-				<li class="picasa"><a href="http://picasaweb.google.com/alonsogarciapablo" rel="external">Mis fotos en Picasa</a></li> 
+				<li class="github"><a href="https://github.com/alonsogarciapablo" rel="external">Mi código en github</a></li> 
 			</ul>
     </div>
     <div id="contact" class="sidebar-box">
@@ -45,7 +45,7 @@
     <h3>Trabajo con Ruby On Rails</h3>
     <p>He trabajado en proyectos <i>Java</i>, <i>Javascript</i> y <i>XUL</i>, <i>PHP</i>. En 2007 descubrí <a href="http://rubyonrails.org/" rel="external">Ruby On Rails</a>, que ofrece un <i>framework</i> de código abierto para el desarrollo de aplicaciones web. <strong>Ruby es un lenguaje divertido y Rails proporciona soluciones a los problemas más comunes de este tipo de aplicaciones</strong>. Y detrás de todo esto, una comunidad de personas a las que verdaderamente les gusta programar buen código.</p>
     <h3>Creo en las metodologías ágiles</h3>
-    <p>No creo en el modelo de desarrollo en cascada. Mi experiencia me dice que no funciona. Creo <a href="http://agilemanifesto.org/principles.html" rel="external">en los principios del manifiesto Ágil</a>. Metodologías como <a href="http://en.wikipedia.org/wiki/Scrum_(development)" rel="external">SCRUM</a> están dando buenos resultados y yo intento aplicarlas en los proyectos en los que participo. Me queda mucho por aprender, por eso asisto a eventos como <a href="http://alonsogarciapablo.com/blog/retrospectiva-de-agile-spain-2010-la-primera-conferencia-sobre-metodos-agiles-en-espana/">Agile Spain 2010</a>.</p>
+    <p>No creo en el modelo de desarrollo en cascada. Mi experiencia me dice que no funciona. Creo <a href="http://agilemanifesto.org/principles.html" rel="external">en los principios del manifiesto Ágil</a>. Metodologías como <a href="http://en.wikipedia.org/wiki/Scrum_(development)" rel="external">SCRUM</a> están dando buenos resultados y por eso me gustaría probarlo en futuros proyectos. Me queda mucho por aprender, por eso asisto a eventos como <a href="http://alonsogarciapablo.com/blog/retrospectiva-de-agile-spain-2010-la-primera-conferencia-sobre-metodos-agiles-en-espana/">Agile Spain 2010</a>.</p>
     <h3>Creo en las empresas pequeñas</h3>
     <p>He trabajado en grandes empresas. Sin embargo, estoy convencido de que hay otra forma de trabajar. Confío en que gente brillante y muy motivada, organizada en pequeñas empresas, pueden competir contra el más grande. Y lo más importante: desarrollar aplicaciones que satisfacen las necesidades del cliente y son realmente útiles para los usuarios. Y todo eso en un entorno de confianza y buen ambiente.</p>
     <h3>Pienso en los usuarios</h3>
