--- a/index_en.html
+++ b/index_en.html
@@ -25,7 +25,7 @@
 				<li class="twitter"><a href="http://twitter.com/_pablo_alonso" rel="external">My Twitter profile</a></li> 
 				<li class="facebook"><a href="http://www.facebook.com/alonsogarciapablo" rel="external">My Facebook profile</a></li> 
 				<li class="wordpress"><a href="/blog" rel="external">My blog</a></li> 
-				<li class="picasa"><a href="http://picasaweb.google.com/alonsogarciapablo" rel="external">My Picasa pictures</a></li> 
+				<li class="github"><a href="https://github.com/alonsogarciapablo" rel="external">My code in github</a></li> 
 			</ul>
     </div>
     <div id="contact" class="sidebar-box">
@@ -45,7 +45,7 @@
     <h3>I'm working with Ruby On Rails lately</h3>
     <p>I've taken part in several projects, including various languages, like <i>Java</i>, <i>Javascript</i> and <i>XUL</i>, <i>PHP</i>. In 2007 I discovered <a href="http://rubyonrails.org/" rel="external">Ruby On Rails</a>: the open-source web application framework. Ruby is a funny language, and Rails provides solutions to the most common problems in the web environment. And there's a great community of people who really like to write good and clean code. Those are the main reasons why I've chosen RoR as my current environment.</p>
     <h3>I believe in agile methodologies</h3>
-    <p>I don't believe in the waterfall model anymore. After some working experiences, I can say that it doesn't work. I believe in <a href="http://agilemanifesto.org/principles.html" rel="external">the principles of the Agile Manifesto</a>. Methodologies like <a href="http://en.wikipedia.org/wiki/Scrum_(development)" rel="external">SCRUM</a> are hitting bit, and are working really well, so I'm trying to apply them in every project I take part in. Of course, <strong>I still have too many things to learn</strong>, and that's why I attend events like <a href="http://alonsogarciapablo.com/blog/retrospectiva-de-agile-spain-2010-la-primera-conferencia-sobre-metodos-agiles-en-espana/">Agile Spain 2010</a>.</p>
+    <p>I don't believe in the waterfall model anymore. After some working experiences, I can say that it doesn't work. I believe in <a href="http://agilemanifesto.org/principles.html" rel="external">the principles of the Agile Manifesto</a>. Methodologies like <a href="http://en.wikipedia.org/wiki/Scrum_(development)" rel="external">SCRUM</a> are hitting big, and are working really well, and that's why I'd like to work in that kind of teams in the near future. Of course, <strong>I still have too many things to learn</strong>, and that's why I attend events like <a href="http://alonsogarciapablo.com/blog/retrospectiva-de-agile-spain-2010-la-primera-conferencia-sobre-metodos-agiles-en-espana/">Agile Spain 2010</a>.</p>
     <h3>I believe in small companies</h3>
     <p>I've worked in big companies. However, I'm sure there's a better way to work. I know that a small team of brilliant and truly motivated people can fight against the big players. And, what it's more important: they can develop profitable apps that meet the client's needs and are useful to its users. And all that can be achieved in a good and confident atmosphere.</p>
     <h3>I think about the users</h3>
